zero-schema-macros/tests/ui/fail/06_unsupported_item.rs
use zero_schema_macros::zero;

#[zero]
fn not_a_schema() {}

fn main() {}
